Real time translation WIP

--- a/Notebooks/inference/rnn.ipynb
+++ b/Notebooks/inference/rnn.ipynb
@@ -108,38 +108,7 @@
     }
    },
    "cell_type": "code",
-   "source": [
-    "import torch.nn as nn\n",
-    "from torch.nn.utils.rnn import pack_padded_sequence\n",
-    "\n",
-    "class SimpleRNN(nn.Module):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.rnn = nn.RNN(\n",
-    "            input_size=177,\n",
-    "            hidden_size=177,\n",
-    "            num_layers=5,\n",
-    "            batch_first=True\n",
-    "        )\n",
-    "        self.linear = nn.Linear(177, 64)\n",
-    "\n",
-    "    def forward(self, x, lengths):\n",
-    "        # lengths must be on CPU for pack_padded_sequence\n",
-    "        lengths = lengths.cpu()\n",
-    "\n",
-    "        packed = pack_padded_sequence(\n",
-    "            x, lengths,\n",
-    "            batch_first=True,\n",
-    "            enforce_sorted=False\n",
-    "        )\n",
-    "\n",
-    "        packed_out, h = self.rnn(packed)\n",
-    "        # h: (num_layers, batch, hidden_size)\n",
-    "        last = h[-1]                      # final layer’s hidden state\n",
-    "\n",
-    "        logits = self.linear(last)\n",
-    "        return logits"
-   ],
+   "source": "from models import SimpleRNN",
    "id": "e283b8f99b139266",
    "outputs": [],
    "execution_count": 9
@@ -153,6 +122,8 @@
    },
    "cell_type": "code",
    "source": [
+    "import torch.nn as nn\n",
+    "\n",
     "EPOCH = 200\n",
     "\n",
     "model = SimpleRNN().to(device)\n",
@@ -247,7 +218,7 @@
     "        best_test_acc = test_acc\n",
     "        best_test_acc_train_acc = train_acc\n",
     "        if epoch > 70: # Asi no guardo en todas las iteraciones iniciales\n",
-    "            torch.save(model.state_dict(), \"best_model.pth\")\n",
+    "            torch.save(model.state_dict(), \"best_params.pth\")\n",
     "    # ==========================================\n",
     "\n",
     "    # ======================\n",
@@ -513,14 +484,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T15:55:22.423811Z",
-     "start_time": "2025-11-23T15:55:22.380292Z"
+     "end_time": "2025-11-23T17:05:43.858822Z",
+     "start_time": "2025-11-23T17:05:43.816696Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# Recargar el mejor modelo\n",
-    "model.load_state_dict(torch.load(\"best_model.pth\", map_location=device))"
+    "model.load_state_dict(torch.load(\"best_params.pth\", map_location=device))"
    ],
    "id": "9ca3fb12c2853291",
    "outputs": [
@@ -528,8 +499,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_488486/1200492878.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"best_model.pth\", map_location=device))\n"
+      "/tmp/ipykernel_488486/2149482387.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
+      "  model.load_state_dict(torch.load(\"best_params.pth\", map_location=device))\n"
      ]
     },
     {
@@ -538,12 +509,12 @@
        "<All keys matched successfully>"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 16
+   "execution_count": 23
   },
   {
    "metadata": {
@@ -596,12 +567,28 @@
    "execution_count": 21
   },
   {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T17:06:02.632698Z",
+     "start_time": "2025-11-23T17:06:02.594186Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# Guardar al modelo\n",
+    "torch.save(model, \"best_model.pth\")"
+   ],
+   "id": "dcd01faa69429d15",
+   "outputs": [],
+   "execution_count": 24
+  },
+  {
    "metadata": {},
    "cell_type": "code",
    "outputs": [],
    "execution_count": null,
    "source": "",
-   "id": "dcd01faa69429d15"
+   "id": "4ca14a4041192e37"
   }
  ],
  "metadata": {
