Two stage RNN wip

--- a/Notebooks/Experiments/DogCatClassifier.ipynb
+++ b/Notebooks/Experiments/DogCatClassifier.ipynb
@@ -22,9 +22,8 @@
     "\n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "from torch.utils.data import DataLoader, TensorDataset, ConcatDataset\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "import torchvision.transforms as T"
+    "from torch.utils.data import DataLoader, TensorDataset\n",
+    "from sklearn.model_selection import train_test_split"
    ],
    "outputs": [],
    "execution_count": 1
@@ -3473,7 +3472,7 @@
    ],
    "execution_count": 44,
    "source": [
-    "from loss_landscape import compute_and_plot_loss_surface\n",
+    "from Notebooks.Experiments.loss_landscape import compute_and_plot_loss_surface\n",
     "\n",
     "loss_surface = compute_and_plot_loss_surface(\n",
     "    model=model,\n",
