--- a/Notebooks/inference/simple_rnn.ipynb
+++ b/Notebooks/inference/simple_rnn.ipynb
@@ -117,131 +117,15 @@
    "execution_count": 10
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-24T19:03:36.983027Z",
-     "start_time": "2025-11-24T18:58:09.901485Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "model = SimpleRNN()\n",
-    "training_loop(model, train_loader, test_loader, \"best_params.pth\", lr=1e-4, weight_decay=1e-3)"
+    "training_loop(model, train_loader, test_loader, \"../../models/SimpleDetector/best_params.pth\", lr=1e-4, weight_decay=1e-3)"
    ],
-   "id": "cfed47b15c38ecfc",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/100 | Train Acc: 3.12% | Test Acc: 5.96%\n",
-      "Epoch 2/100 | Train Acc: 11.25% | Test Acc: 7.52%\n",
-      "Epoch 3/100 | Train Acc: 11.88% | Test Acc: 8.15%\n",
-      "Epoch 4/100 | Train Acc: 13.75% | Test Acc: 10.82%\n",
-      "Epoch 5/100 | Train Acc: 13.75% | Test Acc: 9.72%\n",
-      "Epoch 6/100 | Train Acc: 13.12% | Test Acc: 9.25%\n",
-      "Epoch 7/100 | Train Acc: 16.25% | Test Acc: 12.07%\n",
-      "Epoch 8/100 | Train Acc: 18.75% | Test Acc: 15.05%\n",
-      "Epoch 9/100 | Train Acc: 16.25% | Test Acc: 14.89%\n",
-      "Epoch 10/100 | Train Acc: 17.50% | Test Acc: 14.11%\n",
-      "Epoch 11/100 | Train Acc: 27.50% | Test Acc: 18.03%\n",
-      "Epoch 12/100 | Train Acc: 22.50% | Test Acc: 17.40%\n",
-      "Epoch 13/100 | Train Acc: 17.50% | Test Acc: 19.12%\n",
-      "Epoch 14/100 | Train Acc: 22.50% | Test Acc: 18.34%\n",
-      "Epoch 15/100 | Train Acc: 23.12% | Test Acc: 19.44%\n",
-      "Epoch 16/100 | Train Acc: 22.50% | Test Acc: 23.67%\n",
-      "Epoch 17/100 | Train Acc: 31.25% | Test Acc: 30.09%\n",
-      "Epoch 18/100 | Train Acc: 43.75% | Test Acc: 31.19%\n",
-      "Epoch 19/100 | Train Acc: 39.38% | Test Acc: 31.19%\n",
-      "Epoch 20/100 | Train Acc: 38.12% | Test Acc: 32.45%\n",
-      "Epoch 21/100 | Train Acc: 29.38% | Test Acc: 30.25%\n",
-      "Epoch 22/100 | Train Acc: 38.75% | Test Acc: 31.82%\n",
-      "Epoch 23/100 | Train Acc: 33.75% | Test Acc: 33.54%\n",
-      "Epoch 24/100 | Train Acc: 46.25% | Test Acc: 35.11%\n",
-      "Epoch 25/100 | Train Acc: 41.88% | Test Acc: 33.39%\n",
-      "Epoch 26/100 | Train Acc: 33.75% | Test Acc: 34.17%\n",
-      "Epoch 27/100 | Train Acc: 40.62% | Test Acc: 36.52%\n",
-      "Epoch 28/100 | Train Acc: 42.50% | Test Acc: 39.34%\n",
-      "Epoch 29/100 | Train Acc: 40.00% | Test Acc: 36.68%\n",
-      "Epoch 30/100 | Train Acc: 40.62% | Test Acc: 37.15%\n",
-      "Epoch 31/100 | Train Acc: 44.38% | Test Acc: 36.68%\n",
-      "Epoch 32/100 | Train Acc: 41.25% | Test Acc: 38.40%\n",
-      "Epoch 33/100 | Train Acc: 45.00% | Test Acc: 41.07%\n",
-      "Epoch 34/100 | Train Acc: 50.62% | Test Acc: 41.38%\n",
-      "Epoch 35/100 | Train Acc: 45.62% | Test Acc: 38.56%\n",
-      "Epoch 36/100 | Train Acc: 49.38% | Test Acc: 41.07%\n",
-      "Epoch 37/100 | Train Acc: 48.12% | Test Acc: 44.83%\n",
-      "Epoch 38/100 | Train Acc: 42.50% | Test Acc: 42.63%\n",
-      "Epoch 39/100 | Train Acc: 49.38% | Test Acc: 43.73%\n",
-      "Epoch 40/100 | Train Acc: 46.25% | Test Acc: 46.24%\n",
-      "Epoch 41/100 | Train Acc: 7.50% | Test Acc: 9.09%\n",
-      "Epoch 42/100 | Train Acc: 25.00% | Test Acc: 24.61%\n",
-      "Epoch 43/100 | Train Acc: 41.88% | Test Acc: 37.93%\n",
-      "Epoch 44/100 | Train Acc: 48.12% | Test Acc: 43.10%\n",
-      "Epoch 45/100 | Train Acc: 51.88% | Test Acc: 44.04%\n",
-      "Epoch 46/100 | Train Acc: 40.00% | Test Acc: 42.01%\n",
-      "Epoch 47/100 | Train Acc: 47.50% | Test Acc: 43.73%\n",
-      "Epoch 48/100 | Train Acc: 53.12% | Test Acc: 45.45%\n",
-      "Epoch 49/100 | Train Acc: 48.75% | Test Acc: 48.28%\n",
-      "Epoch 50/100 | Train Acc: 50.00% | Test Acc: 46.71%\n",
-      "Epoch 51/100 | Train Acc: 53.12% | Test Acc: 49.69%\n",
-      "Epoch 52/100 | Train Acc: 48.12% | Test Acc: 48.12%\n",
-      "Epoch 53/100 | Train Acc: 53.75% | Test Acc: 48.75%\n",
-      "Epoch 54/100 | Train Acc: 51.25% | Test Acc: 51.41%\n",
-      "Epoch 55/100 | Train Acc: 52.50% | Test Acc: 50.94%\n",
-      "Epoch 56/100 | Train Acc: 51.25% | Test Acc: 51.88%\n",
-      "Epoch 57/100 | Train Acc: 61.88% | Test Acc: 54.08%\n",
-      "Epoch 58/100 | Train Acc: 60.62% | Test Acc: 54.39%\n",
-      "Epoch 59/100 | Train Acc: 61.88% | Test Acc: 54.08%\n",
-      "Epoch 60/100 | Train Acc: 62.50% | Test Acc: 55.02%\n",
-      "Epoch 61/100 | Train Acc: 58.12% | Test Acc: 55.33%\n",
-      "Epoch 62/100 | Train Acc: 61.25% | Test Acc: 56.74%\n",
-      "Epoch 63/100 | Train Acc: 63.12% | Test Acc: 56.90%\n",
-      "Epoch 64/100 | Train Acc: 63.75% | Test Acc: 55.64%\n",
-      "Epoch 65/100 | Train Acc: 62.50% | Test Acc: 58.15%\n",
-      "Epoch 66/100 | Train Acc: 66.25% | Test Acc: 57.52%\n",
-      "Epoch 67/100 | Train Acc: 63.12% | Test Acc: 57.52%\n",
-      "Epoch 68/100 | Train Acc: 55.62% | Test Acc: 48.75%\n",
-      "Epoch 69/100 | Train Acc: 65.62% | Test Acc: 59.09%\n",
-      "Epoch 70/100 | Train Acc: 66.88% | Test Acc: 61.13%\n",
-      "Epoch 71/100 | Train Acc: 63.12% | Test Acc: 60.34%\n",
-      "Epoch 72/100 | Train Acc: 60.00% | Test Acc: 56.11%\n",
-      "Epoch 73/100 | Train Acc: 66.25% | Test Acc: 62.07%\n",
-      "Epoch 74/100 | Train Acc: 53.75% | Test Acc: 57.37%\n",
-      "Epoch 75/100 | Train Acc: 61.88% | Test Acc: 60.19%\n",
-      "Epoch 76/100 | Train Acc: 69.38% | Test Acc: 61.60%\n",
-      "Epoch 77/100 | Train Acc: 51.88% | Test Acc: 57.05%\n",
-      "Epoch 78/100 | Train Acc: 58.75% | Test Acc: 57.52%\n",
-      "Epoch 79/100 | Train Acc: 73.75% | Test Acc: 59.72%\n",
-      "Epoch 80/100 | Train Acc: 64.38% | Test Acc: 64.11%\n",
-      "Epoch 81/100 | Train Acc: 66.25% | Test Acc: 62.54%\n",
-      "Epoch 82/100 | Train Acc: 70.62% | Test Acc: 63.01%\n",
-      "Epoch 83/100 | Train Acc: 66.25% | Test Acc: 64.26%\n",
-      "Epoch 84/100 | Train Acc: 71.25% | Test Acc: 63.01%\n",
-      "Epoch 85/100 | Train Acc: 68.75% | Test Acc: 63.95%\n",
-      "Epoch 86/100 | Train Acc: 71.25% | Test Acc: 63.79%\n",
-      "Epoch 87/100 | Train Acc: 75.00% | Test Acc: 66.61%\n",
-      "Epoch 88/100 | Train Acc: 66.88% | Test Acc: 61.60%\n",
-      "Epoch 89/100 | Train Acc: 68.75% | Test Acc: 61.76%\n",
-      "Epoch 90/100 | Train Acc: 69.38% | Test Acc: 66.30%\n",
-      "Epoch 91/100 | Train Acc: 65.00% | Test Acc: 65.67%\n",
-      "Epoch 92/100 | Train Acc: 63.75% | Test Acc: 63.64%\n",
-      "Epoch 93/100 | Train Acc: 70.62% | Test Acc: 67.24%\n",
-      "Epoch 94/100 | Train Acc: 73.12% | Test Acc: 69.91%\n",
-      "Epoch 95/100 | Train Acc: 73.12% | Test Acc: 69.59%\n",
-      "Epoch 96/100 | Train Acc: 71.88% | Test Acc: 66.30%\n",
-      "Epoch 97/100 | Train Acc: 78.75% | Test Acc: 67.08%\n",
-      "Epoch 98/100 | Train Acc: 76.25% | Test Acc: 71.63%\n",
-      "Epoch 99/100 | Train Acc: 66.88% | Test Acc: 63.79%\n",
-      "Epoch 100/100 | Train Acc: 75.00% | Test Acc: 69.59%\n",
-      "\n",
-      "================ FINAL RESULTS ================\n",
-      "Highest Train Acc: 78.75% (Test Acc at that time: 67.08%)\n",
-      "Highest Test Acc:  71.63% (Train Acc at that time: 76.25%)\n"
-     ]
-    }
-   ],
-   "execution_count": 11
+   "id": "56a09241e9f87923"
   },
   {
    "metadata": {},
@@ -287,48 +171,21 @@
    "id": "f04998b1739980cf"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-24T18:56:35.752119807Z",
-     "start_time": "2025-11-24T01:01:45.184385Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Recargar el mejor modelo\n",
-    "model.load_state_dict(torch.load(\"best_params.pth\", map_location=device))"
+    "model.load_state_dict(torch.load(\"../../models/SimpleDetector/best_params.pth\", map_location=device))"
    ],
-   "id": "9ca3fb12c2853291",
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/tmp/ipykernel_719535/2149482387.py:2: FutureWarning: You are using `torch.load` with `weights_only=False` (the current default value), which uses the default pickle module implicitly. It is possible to construct malicious pickle data which will execute arbitrary code during unpickling (See https://github.com/pytorch/pytorch/blob/main/SECURITY.md#untrusted-models for more details). In a future release, the default value for `weights_only` will be flipped to `True`. This limits the functions that could be executed during unpickling. Arbitrary objects will no longer be allowed to be loaded via this mode unless they are explicitly allowlisted by the user via `torch.serialization.add_safe_globals`. We recommend you start setting `weights_only=True` for any use case where you don't have full control of the loaded file. Please open an issue on GitHub for any issues related to this experimental feature.\n",
-      "  model.load_state_dict(torch.load(\"best_params.pth\", map_location=device))\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<All keys matched successfully>"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 8
+   "id": "4efff5209408e637"
   },
   {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-24T18:56:35.752660899Z",
-     "start_time": "2025-11-24T01:02:26.620936Z"
-    }
-   },
+   "metadata": {},
    "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
    "source": [
     "# Ahora guardar la softmax de la seña correcta para cada seña en un csv, asi hago analisis despues\n",
     "labels = []\n",
@@ -351,18 +208,7 @@
     "                    labels.append(y[i].item())\n",
     "                    softmax_score.append(probs[i][y[i]].item())"
    ],
-   "id": "c2066ffff8691481",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a\n",
-      "a\n"
-     ]
-    }
-   ],
-   "execution_count": 10
+   "id": "803a388344c624ea"
   },
   {
    "metadata": {
