--- a/notebooks/inference/simple_rnn.ipynb
+++ b/notebooks/inference/simple_rnn.ipynb
@@ -27,7 +27,7 @@
    "cell_type": "code",
    "source": [
     "# Cargar el dataset\n",
-    "from utils.lsa64.dataset import LSA64Dataset\n",
+    "from src.data import LSA64Dataset\n",
     "from torch.utils.data import DataLoader, random_split\n",
     "import torch\n",
     "\n",
