--- a/notebooks/inference/two_stage.ipynb
+++ b/notebooks/inference/two_stage.ipynb
@@ -9,10 +9,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from typing import Any\n",
     "\n",
-    "from lightning.pytorch.utilities.types import STEP_OUTPUT, OptimizerLRScheduler\n",
-    "from mpmath.libmp import from_int\n",
     "\n",
     "from notebooks.inference.simple_rnn import lengths\n",
     "%load_ext autoreload\n",
@@ -33,8 +30,8 @@
    "cell_type": "code",
    "source": [
     "# Cargar el dataset\n",
-    "from utils.lsa64.dataset import LSA64Dataset\n",
-    "from torch.utils.data import DataLoader, random_split\n",
+    "from src.data import LSA64Dataset\n",
+    "from torch.utils.data import random_split\n",
     "import torch\n",
     "\n",
     "dataset = LSA64Dataset(\"../../data/LSA64/landmarks\", hand_label=True)\n",
