--- a/experiments/landmarks/01_processing_speed/processing_speed.ipynb
+++ b/experiments/landmarks/01_processing_speed/processing_speed.ipynb
@@ -229,7 +229,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from src.mediapipe.render import render_frame\n",
+    "from src.utils.mediapipe import render_frame\n",
     "\n",
     "with mp.solutions.pose.Pose() as pose, mp.solutions.hands.Hands(max_num_hands=2) as hands, \\\n",
     "     ThreadPoolExecutor(max_workers=2) as ex:\n",
