--- a/notebooks/01_mediapipe_test.ipynb
+++ b/notebooks/01_mediapipe_test.ipynb
@@ -53,7 +53,7 @@
    "cell_type": "code",
    "source": [
     "from src.utils.video import frame_reader\n",
-    "from src.mediapipe.render import render_holistic_frame\n",
+    "from src.utils.mediapipe import render_holistic_frame\n",
     "\n",
     "with mediapipe.solutions.holistic.Holistic(model_complexity=2, static_image_mode=False) as holistic:\n",
     "    for frame in frame_reader(cap, fps=12):\n",
