--- a/notebooks/missing_values.ipynb
+++ b/notebooks/missing_values.ipynb
@@ -29,7 +29,7 @@
    },
    "cell_type": "code",
    "source": [
-    "from src.mediapipe.render import render_frame, render_holistic_frame\n",
+    "from src.utils.mediapipe import render_frame, render_holistic_frame\n",
     "from concurrent.futures import ThreadPoolExecutor\n",
     "from src.utils.video import frame_reader\n",
     "import mediapipe as mp\n",
